fix image alignment not working inside the tabbed content

--- a/src/blocks/tabbed-content/editor.scss
+++ b/src/blocks/tabbed-content/editor.scss
@@ -55,3 +55,27 @@
 		margin: 20px;
 	}
 }
+.wp-block-ub-tabbed-content-tabs-content {
+	.wp-block-ub-tabbed-content-tab-content-wrap {
+		> .block-editor-inner-blocks {
+			> .block-editor-block-list__layout {
+				> .alignright {
+					float: right;
+					margin-inline-start: 2em;
+					margin-inline-end: 0;
+				}
+
+				> .alignleft {
+					float: left;
+					margin-inline-start: 0;
+					margin-inline-end: 2em;
+				}
+
+				> .aligncenter {
+					margin-inline-start: auto;
+					margin-inline-end: auto;
+				}
+			}
+		}
+	}
+}
