--- a/src/blocks/tabbed-content/style.scss
+++ b/src/blocks/tabbed-content/style.scss
@@ -23,6 +23,26 @@
 .wp-block-ub-tabbed-content {
 	margin-top: 30px;
 	margin-bottom: 30px;
+	.wp-block-ub-tabbed-content-tabs-content {
+		.wp-block-ub-tabbed-content-tab-content-wrap {
+			> .alignright {
+				float: right;
+				margin-inline-start: 2em;
+				margin-inline-end: 0;
+			}
+
+			> .alignleft {
+				float: left;
+				margin-inline-start: 0;
+				margin-inline-end: 2em;
+			}
+
+			> .aligncenter {
+				margin-inline-start: auto;
+				margin-inline-end: auto;
+			}
+		}
+	}
 
 	& .wp-block-ub-tabbed-content-tabs-content {
 		border: 1px solid lightgrey;
